--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="css/normalize.css">
 		<link href="css/style.css" rel="stylesheet">
 		<title>HTML Academy: Глейси</title>
 	</head>
@@ -11,7 +12,7 @@
 		<input class="hide" type="radio" name="ground_color" id="brown_3">
 		<div class="wrapper">
 			<header class="main_header">
-				<div class="header_container">
+				<div class="header_container clearfix">
 					<div class="right_item_container">
 						<div class="right_item">
 							<div class="search_block">
@@ -68,7 +69,7 @@
 							<label for="brown_3">3</label>
 						</div>
 					</div>
-					<div class="free_container">
+					<div class="free_container clearfix">
 						<div class="raspberry block_free">
 							<h2>Малинка даром!</h2>
 							<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
@@ -80,7 +81,7 @@
 							<a class="btn" href="#">Хочу шоколадки!</a>
 						</div>
 					</div>
-					<div class="catolog_hit">
+					<div class="catalog_container">
 						<div class="catalog_item">
 							<div class="catalog_preview hit">
 								<img class="ice_cream" src="img/1.png" alt="Ice_cream" width="267" height="267">
@@ -124,24 +125,24 @@
 					</div>
 					<div class="about_company">
 						<h3>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
-						<div class="mini_ice_cream">
-							<img src="" alt="mini_ice_cream block_company">
+						<div class="mini_ice_cream block_info">
+							<img src="" alt="mini_ice_cream">
 							<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
 						</div>
-						<div class="leaflet">
-							<img src="" alt="leaflet block_company">
+						<div class="leaflet block_info">
+							<img src="" alt="leaflet">
 							<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья. </p>
 						</div>
-						<div class="cow">
-							<img src="" alt="cow block_company">
+						<div class="cow block_info">
+							<img src="" alt="cow">
 							<p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
 						</div>	
-						<div class="thermometer">
-							<img src="" alt="thermometer block_company">
+						<div class="thermometer block_info">
+							<img src="" alt="thermometer">
 							<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, которая не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
 						</div>
 					</div>
-					<div class="news_delivery">
+					<div class="news_delivery clearfix">
 						<div class="news">
 							<div class="news_img">
 								<img src="" alt="news_img">
@@ -157,7 +158,7 @@
 							</form>
 						</div>
 					</div>
-					<div class="map">
+					<div class="map clearfix">
 						<div class="index_content_right">
 							<div class="white_block">
 								<img src="" alt="white_block">
@@ -179,13 +180,13 @@
 				</div>
 			</main>
 			<footer>
-				<div class="container">
+				<div class="container main_footer clearfix">
 					<div class="footer_social">
 						<section class="footer_social">
 							<a class="social_btn social_btn_tvit" href="#">Твитер</a>
 							<a class="social_btn social_btn_inst" href="#">Инстаграм</a>
 							<a class="social_btn social_btn_fb" href="#">Фейсбук</a>
-							<a class="social_btn social_btn_vk" href="#">Вконтакте</a>			
+							<a class="social_btn social_btn_vk" href="#">Вконтакте</a>
 						</section>
 					</div>
 					<div class="footer_center">
@@ -204,7 +205,7 @@
 							</li>
 						</ul>
 					</div>
-					<div>	
+					<div class="footer_logo">
 						<div class="logo_htmlacademy">
 							<img src="" alt="logo_htmlacademy">
 						</div>
