--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
 		<link href="css/style.css" rel="stylesheet">
 		<title>HTML Academy: Глейси</title>
 	</head>
-<body>
+	<body>
 		<header class="main_header">
 			<div class="header_container clearfix">
 				<div class="right_item_container">
@@ -245,7 +245,7 @@
 						 </div>
 					</div>
 				</div>
-    			<div class="pagination">
+				<div class="pagination">
 					<ul>
 						<li><a href="#" class="prev"></a></li>
 						<li><a class="active" href="#">1</a></li>
@@ -258,8 +258,8 @@
 				</div>
 			</div>
 		</main>
-		<footer>
-			<div class="container main_footer clearfix">
+		<footer class="main_footer">
+			<div class="container clearfix">
 				<div class="footer_social">
 					<section class="footer_social">
 						<a class="social_btn social_btn_tvit" href="#">Твитер</a>
@@ -284,7 +284,7 @@
 						</li>
 					</ul>
 				</div>
-				<div>	
+				<div class="footer_logo">
 					<div class="logo_htmlacademy">
 						<img src="" alt="logo_htmlacademy">
 					</div>
