--- a/catalog.html
+++ b/catalog.html
@@ -3,46 +3,46 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/normalize.css">
-		<link href="css/style.css" rel="stylesheet">
+		<link rel="stylesheet" href="css/style.css" >
 		<title>HTML Academy: Глейси</title>
 	</head>
 	<body>
 		<header class="main_header">
-			<div class="header_container clearfix">
-				<div class="right_item_container">
-					<div class="right_item">
-						<div class="search_block">
-							<a class="search" href="#"><img src="http://placehold.it/15x10" alt="Поиск"></a>
+				<div class="container clearfix">
+					<div class="right_item_container">
+						<div class="right_item">
+							<div class="search_block">
+								<a class="search" href="#"><img src="http://placehold.it/15x10" alt="Поиск"></a>
+							</div>
+							<div class="user_block">
+								<a class="login" href="#">Вход</a>
+							</div>
+							<div class="basket_block">
+								<a class="basket" href="#">Пусто</a>
+							</div>
 						</div>
-						<div class="user_block">
-							<a class="login" href="#"><img src="http://placehold.it/15x10" alt="Вход">Вход</a>
-						</div>
-						<div class="basket_block">
-							<a class="basket" href="#"><img src="http://placehold.it/15x10" alt="Корзина">Пусто</a>
+						<div class="graph_phone">
+							С 10 до 20, ежедневно<br>
+							<span>8 812 450-25-25</span>
 						</div>
 					</div>
-					<div class="graph_phone">
-						С 10 до 20, ежедневно<br>
-						<span>8 812 450-25-25</span>
-					</div>
-				</div>
-				<a href="#">
-					<img src="http://placehold.it/15x10" alt="Логотип">
-				</a>
-				<nav class="main_navigation">
-					<ul>
-						<li>
-							<a href="#">Каталог</a>
-						</li>
-						<li>
-							<a href="#">Доставка и оплата</a>
-						</li>
-						<li>
-							<a href="#">О Компании</a>
-						</li>
-					</ul>
-				</nav>
-			</div>	
+					<nav class="main_navigation clearfix">
+						<div class="logo">
+							<img src="img/logo.svg" alt="Логотип">
+						</div>
+						<ul class="navigation">
+							<li>
+								<a href="#">Каталог</a>
+							</li>
+							<li>
+								<a href="#">Доставка и оплата</a>
+							</li>
+							<li>
+								<a href="#">О Компании</a>
+							</li>
+						</ul>
+					</nav>
+				</div>	
 		</header>
 		<main class="main_container">
 			<div class="container clearfix">
@@ -259,38 +259,38 @@
 			</div>
 		</main>
 		<footer class="main_footer">
-			<div class="container clearfix">
-				<div class="footer_social">
-					<section class="footer_social">
-						<a class="social_btn social_btn_tvit" href="#">Твитер</a>
-						<a class="social_btn social_btn_inst" href="#">Инстаграм</a>
-						<a class="social_btn social_btn_fb" href="#">Фейсбук</a>
-						<a class="social_btn social_btn_vk" href="#">Вконтакте</a>
-					</section>
-				</div>
-				<div class="footer_center">
-					<ul>
-						<li>
-							<a href="#"><img src="http://placehold.it/15x10" alt="heart">Для поставщиков</a>
-						</li>
-						<li>
-							<a href="#">О производстве</a>
-						</li>
-						<li>
-							<a href="#">Наши документы</a>
-						</li>
-						<li>
-							<a href="#">Экологические стандарты</a>
-						</li>
-					</ul>
-				</div>
-				<div class="footer_logo">
-					<div class="logo_htmlacademy">
-						<img src="" alt="logo_htmlacademy">
+				<div class="container clearfix">
+					<div class="footer_social">
+						<section class="footer_social">
+							<a class="social_btn social_btn_tvit" href="#">Твитер</a>
+							<a class="social_btn social_btn_inst" href="#">Инстаграм</a>
+							<a class="social_btn social_btn_fb" href="#">Фейсбук</a>
+							<a class="social_btn social_btn_vk" href="#">Вконтакте</a>
+						</section>
 					</div>
-					<span class="htmlacademy">Сделано в HTML Academy © 2016</span>
+					<div class="footer_center">
+						<ul>
+							<li>
+								<a href="#">Для поставщиков</a>
+							</li>
+							<li>
+								<a href="#">О производстве</a>
+							</li>
+							<li>
+								<a href="#">Наши документы</a>
+							</li>
+							<li>
+								<a href="#">Экологические стандарты</a>
+							</li>
+						</ul>
+					</div>
+					<div class="footer_logo">
+						<div class="logo_htmlacademy">
+							<img src="" alt="logo_htmlacademy">
+						</div>
+						<span class="htmlacademy">Сделано в HTML Academy © 2016</span>
+					</div>
 				</div>
-			</div>
 		</footer>
 	</body>
 </html>
