--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/normalize.css">
-		<link href="css/style.css" rel="stylesheet">
+		<link rel="stylesheet" href="css/style.css" >
 		<title>HTML Academy: Глейси</title>
 	</head>
 	<body>
@@ -19,10 +19,10 @@
 								<a class="search" href="#"><img src="http://placehold.it/15x10" alt="Поиск"></a>
 							</div>
 							<div class="user_block">
-								<a class="login" href="#"><img src="http://placehold.it/15x10" alt="Вход">Вход</a>
+								<a class="login" href="#">Вход</a>
 							</div>
 							<div class="basket_block">
-								<a class="basket" href="#"><img src="http://placehold.it/15x10" alt="Корзина">Пусто</a>
+								<a class="basket" href="#">Пусто</a>
 							</div>
 						</div>
 						<div class="graph_phone">
@@ -30,11 +30,11 @@
 							<span>8 812 450-25-25</span>
 						</div>
 					</div>
-					<div class="logo">
-						<img src="img/logo.svg" alt="Логотип">
-					</div>
-					<nav class="main_navigation">
-						<ul>
+					<nav class="main_navigation clearfix">
+						<div class="logo">
+							<img src="img/logo.svg" alt="Логотип">
+						</div>
+						<ul class="navigation">
 							<li>
 								<a href="#">Каталог</a>
 							</li>
@@ -189,7 +189,7 @@
 					<div class="footer_center">
 						<ul>
 							<li>
-								<a href="#"><img src="http://placehold.it/15x10" alt="heart">Для поставщиков</a>
+								<a href="#">Для поставщиков</a>
 							</li>
 							<li>
 								<a href="#">О производстве</a>
