--- a/catalog.html
+++ b/catalog.html
@@ -4,10 +4,12 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css" >
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 		<title>HTML Academy: Глейси</title>
 	</head>
 	<body>
-		<header class="main_header">
+		<div class="content">
+			<header class="main_header">
 				<div class="container clearfix">
 					<div class="right_item_container">
 						<div class="right_item">
@@ -28,7 +30,7 @@
 					</div>
 					<nav class="main_navigation clearfix">
 						<div class="logo">
-							<img src="img/logo.svg" alt="Логотип">
+							<a href="#"><img src="img/logo.svg" alt="Логотип"></a>
 						</div>
 						<ul class="navigation">
 							<li>
@@ -43,8 +45,8 @@
 						</ul>
 					</nav>
 				</div>	
-		</header>
-		<main class="main_container">
+			</header>
+			<main class="main_container">
 			<div class="container clearfix">
 				<ul class="breadcrumbs">
 					<li>
@@ -257,8 +259,8 @@
 					</ul>
 				</div>
 			</div>
-		</main>
-		<footer class="main_footer">
+			</main>
+			<footer class="main_footer">
 				<div class="container clearfix">
 					<div class="footer_social">
 						<section class="footer_social">
@@ -291,6 +293,7 @@
 						<span class="htmlacademy">Сделано в HTML Academy © 2016</span>
 					</div>
 				</div>
-		</footer>
+			</footer>
+		</div>
 	</body>
 </html>
