--- a/index.html
+++ b/index.html
@@ -4,212 +4,215 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css" >
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 		<title>HTML Academy: Глейси</title>
 	</head>
 	<body>
-		<input class="hide" type="radio" name="ground_color" id="green_1">
+		<input class="hide" type="radio" name="ground_color" id="green_1" checked>
 		<input class="hide" type="radio" name="ground_color" id="violet_2">
 		<input class="hide" type="radio" name="ground_color" id="brown_3">
 		<div class="wrapper">
-			<header class="main_header">
-				<div class="container clearfix">
-					<div class="right_item_container">
-						<div class="right_item">
-							<div class="search_block">
-								<a class="search" href="#"><img src="http://placehold.it/15x10" alt="Поиск"></a>
+			<div class="content">
+				<header class="main_header">
+					<div class="container clearfix">
+						<div class="right_item_container">
+							<div class="right_item">
+								<div class="search_block">
+									<a class="search" href="#"></a>
+								</div>
+								<div class="user_block">
+									<a class="login" href="#">Вход</a>
+								</div>
+								<div class="basket_block">
+									<a class="basket" href="#">Пусто</a>
+								</div>
 							</div>
-							<div class="user_block">
-								<a class="login" href="#">Вход</a>
-							</div>
-							<div class="basket_block">
-								<a class="basket" href="#">Пусто</a>
+							<div class="graph_phone clearfix">
+								<div class="graph">С 10 до 20, ежедневно</div>
+								<div class="phone">8 812 450-25-25</div>
 							</div>
 						</div>
-						<div class="graph_phone">
-							С 10 до 20, ежедневно<br>
-							<span>8 812 450-25-25</span>
+						<nav class="main_navigation clearfix">
+							<div class="logo">
+								<img src="img/logo.svg" alt="Логотип" width="155" height="65">
+							</div>
+							<ul class="navigation">
+								<li>
+									<a href="#">Каталог</a>
+								</li>
+								<li>
+									<a href="#">Доставка и оплата</a>
+								</li>
+								<li>
+									<a href="#">О Компании</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+				</header>
+				<main class="main_container">
+					<div class="container">
+						<div class="main_slide">
+							<div class="slider">
+								<div class="slide" id="slide_green_1">
+									<div class="text_slide">Крем-брюле и пломбир с малиновым джемом</div>
+									<a class="btn_slide button_1" href="#">Давайте оба!</a>
+								</div>
+								<div class="slide" id="slide_violet_2">
+									<div class="text_slide">Шоколадный пломбир и лимонный сорбет</div>
+									<a class="btn_slide button_2" href="#">Давайте оба!</a>
+								</div>
+								<div class="slide" id="slide_brown_3">
+									<div class="text_slide">Пломбир с помадкой и клубничный щербет</div>
+									<a class="btn_slide button_3" href="#">Давайте оба!</a>
+								</div>
+							</div>
+							<div class="slider_controls">
+								<label for="green_1" class="slide-label label_green_1"></label>
+								<label for="violet_2" class="slide-label label_violet_2"></label>
+								<label for="brown_3" class="slide-label label_brown_3"></label>
+							</div>
+						</div>
+						<div class="free_container">
+							<div class="block_free raspberry_free">
+								<h2 class="raspberry">Малинка даром!</h2>
+								<p class="raspberry">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+								<a class="btn" href="#">Хочу варенье!</a>
+							</div>
+							<div class="block_free chocolate_free">
+								<h2 class="chocolate">Шоколадки даром!</h2>
+								<p class="chocolate">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+								<a class="btn" href="#">Хочу шоколадки!</a>
+							</div>
+						</div>
+						<div class="catalog_container">
+							<div class="catalog_item">
+								<div class="catalog_preview hit">
+									<img class="ice_cream" src="img/1.png" alt="Ice_cream" width="267" height="267">
+									<span class="catalog_price">310₽/кг</span>
+								</div>
+								<a class="catalog_title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+								<div class="additional">
+									<a class="btn" href="#">Быстрый просмотр</a>
+								</div>
+							</div>
+							<div class="catalog_item">
+								<div class="catalog_preview hit">
+									<img class="ice_cream" src="img/2.png" alt="Ice_cream" width="267" height="267">
+									<span class="catalog_price">355₽/кг</span>
+								</div>
+								<a class="catalog_title" href="#">Сливочно-кофейное с кусочками шоколада</a>
+								<div class="additional">
+									<a class="btn" href="#">Быстрый просмотр</a>
+								</div>
+							</div>
+							<div class="catalog_item">
+								<div class="catalog_preview hit">
+									<img class="ice_cream" src="img/3.png" alt="Ice_cream" width="267" height="267">
+									<span class="catalog_price">380₽/кг</span>
+								</div>
+								<a class="catalog_title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+								<div class="additional">
+									<a class="btn" href="#">Быстрый просмотр</a>
+								</div>
+							</div>
+							<div class="catalog_item">
+								<div class="catalog_preview hit">
+									<img class="ice_cream" src="img/4.png" alt="Ice_cream" width="267" height="267">
+									<span class="catalog_price">415₽/кг</span>
+								</div>
+								<a class="catalog_title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
+								<div class="additional">
+									<a class="btn" href="#">Быстрый просмотр</a>
+								</div>
+							</div>
+						</div>
+						<div class="about_company">
+							<h3>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
+							<div class="mini_ice_cream block_info">
+								<!-- <img src="" alt="mini_ice_cream"> -->
+								<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+							</div>
+							<div class="cow block_info">
+								<!-- <img src="" alt="cow"> -->
+								<p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+							</div>	           
+							<div class="leaflet block_info">
+								<!-- <img src="" alt="leaflet"> -->
+								<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья. </p>
+							</div>
+							<div class="thermometer block_info">
+								<!-- <img src="" alt="thermometer"> -->
+								<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, которая не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
+							</div>
+						</div>
+						<div class="news_delivery">
+							<div class="block_n_d news">
+								<p class"news_text">Новое в нашем блоге</p>
+								<a href="#">10  способов сервировки фруктовых щербетов к столу</a>
+							</div>
+							<div class="block_n_d delivery"> 
+								<p class="delivery_text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
+								<form action="" method="post">
+									<input type="text" name="email" placeholder="Электронная почта">
+									<button class="btn" type="submit">Отправить</button>
+								</form>
+							</div>
 						</div>
 					</div>
-					<nav class="main_navigation clearfix">
-						<div class="logo">
-							<img src="img/logo.svg" alt="Логотип">
-						</div>
-						<ul class="navigation">
-							<li>
-								<a href="#">Каталог</a>
-							</li>
-							<li>
-								<a href="#">Доставка и оплата</a>
-							</li>
-							<li>
-								<a href="#">О Компании</a>
-							</li>
-						</ul>
-					</nav>
-				</div>
-			</header>
-			<main class="main_container">
-				<div class="container">
-					<div class="main_slide">
-						<div class="slide">
-							<div class="green_1">
-								<span class="text_slide">Крем-брюле и пломбир с малиновым джемом</span>
-								<a class="btn button_1" href="#">Давайте оба!</a>
-							</div>
-							<div class="violet_2">
-								<span class="text_slide">Шоколадный пломбир и лимонный сорбет</span>
-								<a class="btn button_2" href="#">Давайте оба!</a>
-							</div>
-							<div class="brown_3">
-								<span class="text_slide">Пломбир с помадкой и клубничный щербет</span>
-								<a class="btn button_3" href="#">Давайте оба!</a>
-							</div>
-						</div>
-						<div>
-							<label for="green_1">1</label>
-							<label for="violet_2">2</label>
-							<label for="brown_3">3</label>
-						</div>
-					</div>
-					<div class="free_container">
-						<div class=" block_free">
-							<h2 class="raspberry">Малинка даром!</h2>
-							<p class="raspberry">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-							<a class="btn" href="#">Хочу варенье!</a>
-						</div>
-						<div class="block_free">
-							<h2 class="chocolate">Шоколадки даром!</h2>
-							<p class="chocolate">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-							<a class="btn" href="#">Хочу шоколадки!</a>
-						</div>
-					</div>
-					<div class="catalog_container">
-						<div class="catalog_item">
-							<div class="catalog_preview hit">
-								<img class="ice_cream" src="img/1.png" alt="Ice_cream" width="267" height="267">
-								<span class="catalog_price">310₽/кг</span>
-							</div>
-							<a class="catalog_title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-							<div class="additional">
-								<a class="btn" href="#">Быстрый просмотр</a>
-							</div>
-						</div>
-						<div class="catalog_item">
-							<div class="catalog_preview hit">
-								<img class="ice_cream" src="img/2.png" alt="Ice_cream" width="267" height="267">
-								<span class="catalog_price">355₽/кг</span>
-							</div>
-							<a class="catalog_title" href="#">Сливочно-кофейное с кусочками шоколада</a>
-							<div class="additional">
-								<a class="btn" href="#">Быстрый просмотр</a>
-							</div>
-						</div>
-						<div class="catalog_item">
-							<div class="catalog_preview hit">
-								<img class="ice_cream" src="img/3.png" alt="Ice_cream" width="267" height="267">
-								<span class="catalog_price">380₽/кг</span>
-							</div>
-							<a class="catalog_title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-							<div class="additional">
-								<a class="btn" href="#">Быстрый просмотр</a>
-							</div>
-						</div>
-						<div class="catalog_item">
-							<div class="catalog_preview hit">
-								<img class="ice_cream" src="img/4.png" alt="Ice_cream" width="267" height="267">
-								<span class="catalog_price">415₽/кг</span>
-							</div>
-							<a class="catalog_title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
-							<div class="additional">
-								<a class="btn" href="#">Быстрый просмотр</a>
-							</div>
-						</div>
-					</div>
-					<div class="about_company">
-						<h3>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
-						<div class="mini_ice_cream block_info">
-							<img src="" alt="mini_ice_cream">
-							<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-						</div>
-						<div class="cow block_info">
-							<img src="" alt="cow">
-							<p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-						</div>	           
-						<div class="leaflet block_info">
-							<img src="" alt="leaflet">
-							<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья. </p>
-						</div>
-						<div class="thermometer block_info">
-							<img src="" alt="thermometer">
-							<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, которая не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
-						</div>
-					</div>
-					<div class="news_delivery clearfix">
-						<div class="block_n_d">
-											<p class"news">Новое в нашем блоге</p>
-							<a href="#">10  способов сервировки фруктовых щербетов к столу</a>
-							</div>
-						<div class="block_n_d"> 
-							<p class="delivery">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
-							<form action="" method="post">
-								<input type="text" name="email" placeholder="Электронная почта">
-								<button class="btn" type="submit">Отправить</button>
-							</form>
-						</div>
-					</div>
-				</div>
-			</main>
-			<div class="map_wrapper">
+				</main>
+				<!-- <div class="map_wrapper">
 						
-				<div class="map_container">
-					<div class="container_contacts">
-						<p>Адрес главного офиса и<br> 
-							офлайн магазина:
-							<span>ул. Большая Конюшенная 19/8,<br>
-							Санкт-Петербург</span>
-						</p>
-						<p>Для заказов по телефону:<br>
-							<span>8 812 450-25-25</span><br>
-							(с 10 до 20 ежедневно)
-						</p>
-						<a class="btn" href="#">Форма обратной связи</a>
-					</div>
-				</div>
-			</div>
-			<footer class="main_footer">
-				<div class="container clearfix">
-					<div class="footer_social">
-						<section class="footer_social">
-							<a class="social_btn social_btn_tvit" href="#">Твитер</a>
-							<a class="social_btn social_btn_inst" href="#">Инстаграм</a>
-							<a class="social_btn social_btn_fb" href="#">Фейсбук</a>
-							<a class="social_btn social_btn_vk" href="#">Вконтакте</a>
-						</section>
-					</div>
-					<div class="footer_center">
-						<ul>
-							<li>
-								<a href="#">Для поставщиков</a>
-							</li>
-							<li>
-								<a href="#">О производстве</a>
-							</li>
-							<li>
-								<a href="#">Наши документы</a>
-							</li>
-							<li>
-								<a href="#">Экологические стандарты</a>
-							</li>
-						</ul>
-					</div>
-					<div class="footer_logo">
-						<div class="logo_htmlacademy">
-							<img src="" alt="logo_htmlacademy">
+					<div class="map_container">
+						<div class="container_contacts">
+							<p>Адрес главного офиса и<br> 
+								офлайн магазина:
+								<span>ул. Большая Конюшенная 19/8,<br>
+								Санкт-Петербург</span>
+							</p>
+							<p>Для заказов по телефону:<br>
+								<span>8 812 450-25-25</span><br>
+								(с 10 до 20 ежедневно)
+							</p>
+							<a class="btn" href="#">Форма обратной связи</a>
 						</div>
-						<span class="htmlacademy">Сделано в HTML Academy © 2016</span>
 					</div>
-				</div>
-			</footer>
-		</div>
+				</div> -->
+				<footer class="main_footer">
+					<div class="container clearfix">
+						<div class="footer_social">
+							<section class="footer_social">
+								<a class="social_btn social_btn_tvit" href="#">Твитер</a>
+								<a class="social_btn social_btn_inst" href="#">Инстаграм</a>
+								<a class="social_btn social_btn_fb" href="#">Фейсбук</a>
+								<a class="social_btn social_btn_vk" href="#">Вконтакте</a>
+							</section>
+						</div>
+						<div class="footer_center">
+							<ul>
+								<li>
+									<a href="#">Для поставщиков</a>
+								</li>
+								<li>
+									<a href="#">О производстве</a>
+								</li>
+								<li>
+									<a href="#">Наши документы</a>
+								</li>
+								<li>
+									<a href="#">Экологические стандарты</a>
+								</li>
+							</ul>
+						</div>
+						<div class="footer_logo">
+							<div class="logo_htmlacademy">
+								<img src="" alt="logo_htmlacademy">
+							</div>
+							<span class="htmlacademy">Сделано в HTML Academy © 2016</span>
+						</div>
+					</div>
+				</footer>
+			</div>
+  		</div>
 	</body>
 </html>
