--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css" >
-		<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500&amp;subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 		<title>HTML Academy: Глейси</title>
 	</head>
 	<body>
@@ -13,8 +13,7 @@
 		<input class="hide" type="radio" name="ground_color" id="brown_3">
 		<div class="wrapper">
 			<div class="content">
-				<header class="main_header">
-					<div class="container clearfix">
+				<header class="main_header container clearfix">
 						<div class="right_item_container">
 							<div class="right_item">
 								<div class="search_block">
@@ -48,10 +47,8 @@
 								</li>
 							</ul>
 						</nav>
-					</div>
 				</header>
-				<main class="main_container">
-					<div class="container">
+				<main class="main_container container">
 						<div class="main_slide">
 							<div class="slider">
 								<div class="slide" id="slide_green_1">
@@ -148,7 +145,7 @@
 						</div>
 						<div class="news_delivery">
 							<div class="block_n_d news">
-								<p class"news_text">Новое в нашем блоге</p>
+								<p class="news_text">Новое в нашем блоге</p>
 								<a href="#">10  способов сервировки фруктовых щербетов к столу</a>
 							</div>
 							<div class="block_n_d delivery"> 
@@ -159,7 +156,6 @@
 								</form>
 							</div>
 						</div>
-					</div>
 				</main>
 				<!-- <div class="map_wrapper">
 						
@@ -178,14 +174,13 @@
 						</div>
 					</div>
 				</div> -->
-				<footer class="main_footer">
-					<div class="container clearfix">
-						<div class="footer_social">
+				<footer class="main_footer container clearfix">
+						<div class="footer_ social">
 							<section class="footer_social">
-								<a class="social_btn social_btn_tvit" href="#">Твитер</a>
-								<a class="social_btn social_btn_inst" href="#">Инстаграм</a>
-								<a class="social_btn social_btn_fb" href="#">Фейсбук</a>
-								<a class="social_btn social_btn_vk" href="#">Вконтакте</a>
+								<a class="social_btn social_btn_tw" href="#tw"></a>
+								<a class="social_btn social_btn_ig" href="#"></a>
+								<a class="social_btn social_btn_fb" href="#"></a>
+								<a class="social_btn social_btn_vk" href="#"></a>
 							</section>
 						</div>
 						<div class="footer_center">
@@ -210,7 +205,6 @@
 							</div>
 							<span class="htmlacademy">Сделано в HTML Academy © 2016</span>
 						</div>
-					</div>
 				</footer>
 			</div>
   		</div>
