--- a/index.html
+++ b/index.html
@@ -225,11 +225,14 @@
 									<form class="email_block" action="" method="post">
 										<div class="subscription">
 											<input id="subscription" class="email_field" type="text" name="email" placeholder="Электронная почта">
-											<label for="subscription" class="email_label"></label>
+											<label for="subscription" class="email_label">Электронная почта</label>
 										</div>
-											<button class="btn" type="submit">Отправить</button>
+										<button class="btn" type="submit">Отправить</button>
 
 									</form>
+									
+
+
 								</div>
 							</div>
 						</div>
@@ -315,11 +318,11 @@
 							<input id="modal_name" type="text" name="name" placeholder="Как вас зовут?"></input>
 							<label for="modal_name">Как вас зовут?</label>
 						</div>
-						<div>
+						<div class="control">
 							<input id="modal_email" type="email" name="email" placeholder="Ваша почта для ответа?"></input>
-							<label for="modal_email">Ваша почта</label>
+							<label for="modal_email">Ваша почта для ответа?</label>
 						</div>
-						<div>
+						<div class="control">
 							<textarea id="modal_text" name="text" cols="30" rows="5" placeholder="Напишите что нибудь..."></textarea>
 							<label for="modal_text">Напишите что-нибуть...</label>
 						</div>	
