--- a/catalog.html
+++ b/catalog.html
@@ -41,8 +41,8 @@
 											</form>
 										</div>
 								</div>
-								<div class="basket_block">
-									<a class="basket" href="#">Пусто</a>
+								<div class="basket_block ">
+									<a class="basket basket_form" href="#">2 товара</a>
 										<div class="form_basket">
 											
 												
@@ -94,17 +94,17 @@
 									<a  class="active" href="#">Каталог</a>
 										<ul class="catalog_list">
 											<li><a class="bdr" href="#">Новинки</a></li>
-											<li class="active_list"><a href="#">Сливочное</a></li>
+											<li ><a class="active_list" href="#">Сливочное</a></li>
 											<li><a href="#">Щербеты</a></li>
 											<li><a href="#">Фруктовый лед</a></li>
 											<li><a href="#">Мелорин</a></li>
 										</ul>
 								</li>
 								<li>
-									<a href="#">Доставка и оплата</a>
+									<a class="main_menu" href="#">Доставка и оплата</a>
 								</li>
 								<li>
-									<a href="#">О Компании</a>
+									<a class="main_menu" href="#">О Компании</a>
 								</li>
 							</ul>
 						</nav>
@@ -330,11 +330,11 @@
 				<div class="pagination">
 					<ul>
 						<li><a href="#" class="prev disabled"></a></li> 
-						<li><a class="active" href="#">1</a></li>
-						<li><a href="#">2</a></li>
-						<li><a href="#">3</a></li>
-						<li><a href="#">4</a></li>
-						<li><a href="#">5</a></li>
+						<li><a class="active page" href="#">1</a></li>
+						<li><a class="page" href="#">2</a></li>
+						<li><a class="page" href="#">3</a></li>
+						<li><a class="page" href="#">4</a></li>
+						<li><a class="page" href="#">5</a></li>
 						<li><a href="#" class="next"></a></li>
 					</ul>
 				</div>
@@ -356,7 +356,7 @@
 		
 						<div class="footer_logo">
 							<div class="logo_htmlacademy">
-								<img alt="logo_htmlacademy" src="img/logo_htmlacademy.svg" width="107" height="37">
+								<img alt="logo_htmlacademy" src="img/logohtml.png" width="107" height="37">
 							</div>
 							<span class="htmlacademy">Сделано в <a href="#">HTML Academy</a> © 2016</span>
 						</div>
