--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
 									<a class="search" href="#"></a>
 										<div class="form_search">
 											<form class="search_block_form" action="" method="post">
-												<input id="search_block" type="text" placeholder="Что ищем?"></input>
+												<input id="search_block" type="text" placeholder="Что ищем?">
 												<label for="search_block"></label>
 											</form>
 										</div>
@@ -27,12 +27,12 @@
 									<a class="login" href="#">Вход</a>
 										<div class="form_login">
 											<form class="user_block_form" action="" method="post">
-												<input id="email" type="text" placeholder="Электроная почта"></input>
-												<input id="password" type="password" placeholder="Пароль"></input>
+												<input id="email" type="text" placeholder="Электроная почта">
+												<input id="password" type="password" placeholder="Пароль">
 												<label for="email"></label>
 												<label for="password"></label>
 												<div class="enter">
-													<input class="btn" type="sumbit" value="Войти"></input>
+													<input class="btn" type="submit" value="Войти">
 												</div>
 												<div class="links">
 													<a class="forgot_password" href="#">Забыли пароль?</a>
@@ -49,10 +49,10 @@
 													<table class="form_table">
 														<tr>
 															<td>
-																<div class="btn_delete close_basket" href=""></div>
+																<div class="btn_delete close_basket" href="#"></div>
 															</td>
 															<td>
-																<img src="img/mini_ice_cream1.png"  alt=""width="33" height="33">
+																<img src="img/mini_ice_cream1.png"  alt="" width="33" height="33">
 															</td>
 															<td>Пломбир с апельсиновым джемом</td>
 															<td>1,5 кг<span class="grey"> х 200 руб.</span></td>
@@ -60,7 +60,7 @@
 														</tr>
 														<tr>
 															<td>
-																<div class="btn_delete close_basket" href=""></div>
+																<div class="btn_delete close_basket" href="#"></div>
 															</td>
 															<td>
 																<img src="img/mini_ice_cream2.png" width="33" height="33" alt="">
@@ -136,7 +136,7 @@
 								<h4>Сортировка:</h4>
 								<div class="popularity">		
 									<select class="popylar">
-										<option selectedvalue="hide" >по популярности</option>
+										<option selected value="hide" >по популярности</option>
 										<option value="low-cost">сначала недорогие</option>
 										<option value="expensive">сначала дорогие</option>
 										<option value="fatness">по жирности</option>
