--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,7 @@
 										</div>
 								</div>
 								<div class="user_block">
-									<a class="login" href="#">Вход</a>
+									<a class="login" href="login.html">Вход</a>
 										<div class="form_login">
 											<form class="user_block_form" action="" method="post">
 												<input id="email" type="text" placeholder="Электроная почта">
