--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 										</div>
 								</div>
 								<div class="user_block">
-									<a class="login" href="#">Вход</a>
+									<a class="login" href=" login.html">Вход</a>
 										<div class="form_login">
 											<form class="user_block_form" action="" method="post">
 												<input id="email" type="text" placeholder="Электроная почта">
@@ -211,7 +211,7 @@
 									<span>8 812 450-25-25</span><br>
 									(с 10 до 20 ежедневно)
 								</p>
-								<a class="btn form_btn" href="#">Форма обратной связи</a>
+								<a class="btn form_btn" href="feedback-form.html">Форма обратной связи</a>
 							</div>
 						</div>
 					</div>
