--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 		
 						<div class="footer_logo">
 							<div class="logo_htmlacademy">
-								<img alt="logo_htmlacademy" src="img/logohtml.png" width="107" height="37">
+								<img alt="logo_htmlacademy" src="img/logo_htmlacademy.svg" width="107" height="37">
 							</div>
 							<span class="htmlacademy">Сделано в <a href="#">HTML Academy</a> © 2016</span>
 						</div>
