--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							</div>
 						</div>
 						<div class="logo">
-								<img src="img/logo.svg" alt="Логотип" width="155" height="65">
+								<img src="img/main_logo.svg" alt="Логотип" width="155" height="65">
 						</div>
 						<nav class="main_navigation clearfix">
 							
