--- a/catalog.html
+++ b/catalog.html
@@ -85,7 +85,7 @@
 							</div>
 						</div>
 						<div class="logo">
-								<a href="index.html"><img src="img/logo.svg" alt="Логотип" width="155" height="65"></a>
+								<a href="index.html"><img src="img/main_logo.svg" alt="Логотип" width="155" height="65"></a>
 						</div>
 						<nav class="main_navigation clearfix">
 							
