--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
 								<div class="search_block">
 									<a class="search" href="#"></a>
 										<div class="form_search">
-											<form class="search_block_form" action="" method="post">
+											<form class="search_block_form" action="#" method="post">
 												<input id="search_block" type="text" placeholder="Что ищем?">
 												<label for="search_block"></label>
 											</form>
@@ -26,7 +26,7 @@
 								<div class="user_block">
 									<a class="login" href="login.html">Вход</a>
 										<div class="form_login">
-											<form class="user_block_form" action="" method="post">
+											<form class="user_block_form" action="#" method="post">
 												<input id="email" type="text" placeholder="Электроная почта">
 												<input id="password" type="password" placeholder="Пароль">
 												<label for="email"></label>
@@ -49,7 +49,7 @@
 													<table class="form_table">
 														<tr>
 															<td>
-																<div class="btn_delete close_basket" href="#"></div>
+																<div class="btn_delete close_basket"></div>
 															</td>
 															<td>
 																<img src="img/mini_ice_cream1.png"  alt="" width="33" height="33">
@@ -60,7 +60,7 @@
 														</tr>
 														<tr>
 															<td>
-																<div class="btn_delete close_basket" href="#"></div>
+																<div class="btn_delete close_basket"></div>
 															</td>
 															<td>
 																<img src="img/mini_ice_cream2.png" width="33" height="33" alt="">
@@ -327,21 +327,23 @@
 						 </div>
 					</div>
 				</div>
-				<div class="pagination">
-					<ul>
-						<li><a href="#" class="prev disabled"></a></li> 
-						<li><a class="active page" href="#">1</a></li>
-						<li><a class="page" href="#">2</a></li>
-						<li><a class="page" href="#">3</a></li>
-						<li><a class="page" href="#">4</a></li>
-						<li><a class="page" href="#">5</a></li>
-						<li><a href="#" class="next"></a></li>
-					</ul>
+				<div class="pagination_container clearfix">
+					<div class="pagination">
+						<ul>
+							<li><a href="#" class="prev disabled"></a></li> 
+							<li><a class="active page" href="#">1</a></li>
+							<li><a class="page" href="#">2</a></li>
+							<li><a class="page" href="#">3</a></li>
+							<li><a class="page" href="#">4</a></li>
+							<li><a class="page" href="#">5</a></li>
+							<li><a href="#" class="next"></a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 			</div>
 			</main>
-			<footer class="main_footer ">
+			<footer class="main_footer">
 					<div class="container clearfix">	
 						<div class="footer_ social">
 							<section class="footer_social">
@@ -356,7 +358,7 @@
 		
 						<div class="footer_logo">
 							<div class="logo_htmlacademy">
-								<img alt="logo_htmlacademy" src="img/logo_htmlacademy.svgS" width="107" height="37">
+								<img alt="logo_htmlacademy" src="img/logo_htmlacademy.svg" width="107" height="37">
 							</div>
 							<span class="htmlacademy">Сделано в <a href="#">HTML Academy</a> © 2016</span>
 						</div>
