--- a/catalog.html
+++ b/catalog.html
@@ -93,11 +93,11 @@
 								<li>
 									<a  class="active" href="#">Каталог</a>
 										<ul class="catalog_list">
-											<li><a class="bdr" href="#">Новинки</a></li>
-											<li ><a class="active_list" href="#">Сливочное</a></li>
-											<li><a href="#">Щербеты</a></li>
-											<li><a href="#">Фруктовый лед</a></li>
-											<li><a href="#">Мелорин</a></li>
+											<li class="submenu"><a class="bdr" href="#">Новинки</a></li>
+											<li class="submenu"><a class="active_list" href="#">Сливочное</a></li>
+											<li class="submenu"><a href="#">Щербеты</a></li>
+											<li class="submenu"><a href="#">Фруктовый лед</a></li>
+											<li class="submenu"><a href="#">Мелорин</a></li>
 										</ul>
 								</li>
 								<li>
