--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 								<li>
 									<a class="main_menu" href="catalog.html">Каталог</a>
 										<ul class="catalog_list">
-											<li><a class="bdr" href="#">Новинки</a></li>
-											<li><a href="catalog.html">Сливочное</a></li>
-											<li><a href="#">Щербеты</a></li>
-											<li><a href="#">Фруктовый лед</a></li>
-											<li><a href="#">Мелорин</a></li>
+											<li class="submenu"><a class="bdr" href="#">Новинки</a></li>
+											<li class="submenu"><a href="catalog.html">Сливочное</a></li>
+											<li class="submenu"><a href="#">Щербеты</a></li>
+											<li class="submenu"><a href="#">Фруктовый лед</a></li>
+											<li class="submenu"><a href="#">Мелорин</a></li>
 										</ul>
 								</li>
 								<li>
